// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testDataSourceAdapter exclude option should not import the given tables 1`] = `
"type Capital @model {
  id: Int! @primaryKey
  name: String
  countryId: Int @index(name: \\"countryId\\")
}

type Country @model {
  id: Int! @primaryKey
  name: String
}
"
`;

exports[`testDataSourceAdapter generate schema retains hasMany and belongsTo relationship 1`] = `
"type Blog @model {
  id: Int! @primaryKey
  name: String
  posts: [Post] @hasMany(references: [\\"userId\\"])
}

type Post @model {
  id: Int! @primaryKey
  content: String
  blogId: Int!
  blog: Blog @belongsTo(references: [\\"userId\\"])
}
"
`;

exports[`testDataSourceAdapter generate schema retains hasOne and belongsTo relationship and removes the non-relational fields added manually 1`] = `
"type User @model {
  id: Int! @primaryKey
  name: String
  profile: Profile @hasOne(references: [\\"userId\\"])
}

type Profile @model {
  id: Int! @primaryKey
  content: String
  userId: Int!
  user: User @belongsTo(references: [\\"userId\\"])
}
"
`;

exports[`testDataSourceAdapter generates a default directive and optional types for fields with literal default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  serialNumber: Int @default(value: \\"-1\\")
  ownerName: String @default(value: \\"na\\")
  amount: Float @default(value: \\"101.101\\")
}
"
`;

exports[`testDataSourceAdapter generates optional type but no default directive for fields with computed default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  computed: Float
}
"
`;

exports[`testDataSourceAdapter generates primary key fields as required without the default directive added 1`] = `
"type Account @model {
  id: Int! @primaryKey(sortKeyFields: [\\"serialNumber\\"])
  serialNumber: Int!
  ownerName: String
  amount: Float!
}
"
`;

exports[`testDataSourceAdapter include option should import only the given tables 1`] = `
"type Tasks @model {
  id: String! @primaryKey(sortKeyFields: [\\"title\\"])
  title: String @index(name: \\"tasks_title\\") @index(name: \\"tasks_title_description\\", sortKeyFields: [\\"description\\"])
  description: String
  priority: String
}
"
`;

exports[`testDataSourceAdapter test generate graphql schema from internal reprensentation 1`] = `
"type Capital @model {
  id: Int! @primaryKey
  name: String
  countryId: Int @index(name: \\"countryId\\")
}

type Country @model {
  id: Int! @primaryKey
  name: String
}

type Tasks @model {
  id: String! @primaryKey(sortKeyFields: [\\"title\\"])
  title: String @index(name: \\"tasks_title\\") @index(name: \\"tasks_title_description\\", sortKeyFields: [\\"description\\"])
  description: String
  priority: String
}
"
`;

exports[`testDataSourceAdapter test generate graphql schema on model with enum field 1`] = `
"enum Profile_type {
  Manager
  Employee
}

type Profile @model {
  id: Int! @primaryKey
  name: String
  type: Profile_type
}
"
`;
